--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
       "stopOnEntry": false,
       "args": [],
       "cwd": "${workspaceRoot}",
-      "preLaunchTask": null,
+      "preLaunchTask": "build",
       "runtimeExecutable": null,
       "runtimeArgs": [
         "--nolazy"
@@ -18,7 +18,7 @@
         "NODE_ENV": "development"
       },
       "console": "internalConsole",
-      "sourceMaps": false,
+      "sourceMaps": true,
       "outDir": null
     }
   ]
