--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "keywords": [
     "broccoli",
-    "optimize-js"
+    "optimize-js",
+    "uglify-js"
   ],
   "author": "Kris Selden",
   "license": "MIT",
@@ -29,11 +30,15 @@
   "dependencies": {
     "broccoli-persistent-filter": "^1.2.11",
     "json-stable-stringify": "^1.0.1",
-    "optimize-js": "^1"
+    "optimize-js": "^1",
+    "sorcery": "^0.10.0",
+    "uglify-js": "^2"
   },
   "devDependencies": {
     "broccoli": "^0.16.9",
+    "broccoli-concat": "^2.3.4",
     "broccoli-file-creator": "^1.1.1",
+    "broccoli-funnel": "^1.0.7",
     "rollup": "^0.36.0",
     "rollup-plugin-buble": "^0.14.0"
   }
